# neural-network

./: README.md  neural-from-scratch.ipynb  pyproject.toml
neural_network.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
